logging/test/manifests/kibana/manifests/deployment-envs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  template:
    spec:
      containers:
        - name: kibana
          env:
            - name: ELASTICSEARCH_HOSTS
              value: http://elasticsearch:9200
