logging/test/manifests/kibana/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  labels:
    app.kubernetes.io/name: kibana
    app.kubernetes.io/part-of: logging
spec:
  rules:
    - host: kiba.dev.test
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kibana
                port:
                  number: 5601
